--- a/Smooches/Storyboards/Base.lproj/Main.storyboard
+++ b/Smooches/Storyboards/Base.lproj/Main.storyboard
@@ -466,7 +466,7 @@
                                                                                     </constraints>
                                                                                     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                     <state key="normal" title="Button"/>
-                                                                                    <buttonConfiguration key="configuration" style="plain" image="square" catalog="system"/>
+                                                                                    <buttonConfiguration key="configuration" style="plain" image="checkmark.square" catalog="system"/>
                                                                                     <connections>
                                                                                         <action selector="checkB:" destination="QWm-BE-M94" eventType="touchUpInside" id="HEQ-Zc-YyF"/>
                                                                                     </connections>
@@ -1398,13 +1398,13 @@
     </scenes>
     <resources>
         <image name="arrow.clockwise" catalog="system" width="113" height="128"/>
+        <image name="checkmark.square" catalog="system" width="128" height="114"/>
         <image name="homekit" catalog="system" width="128" height="104"/>
         <image name="message.fill" catalog="system" width="128" height="114"/>
         <image name="pencil.circle.fill" catalog="system" width="128" height="123"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="123"/>
         <image name="plus.square" catalog="system" width="128" height="114"/>
-        <image name="square" catalog="system" width="128" height="114"/>
         <image name="square.and.arrow.up.fill" catalog="system" width="115" height="128"/>
         <image name="xmark" catalog="system" width="128" height="113"/>
         <image name="xmark.bin.fill" catalog="system" width="128" height="92"/>
